2090316: Migrate Candlepin config to smallrye-config
- Migrated to smallrye-config
- Enabled system and environment properties config sources
- Added external config source /etc/candlepin/candlepin.conf
- Added external config source /etc/candlepin/conf.d
- Removed unused and redundant methods from Configuration interface
- Removed getX(name, default) style methods in favor of putting all
  default properties into a single place.